pxc/tests/test_01_px/nestklass.px
import test_common "";

namespace nestklass;

struct foo {
  int v;
  function int mfoo(int x) {
    return x + v;
  }
  struct bar {
    int w;
    function int mbar(int x) {
      return mfoo(w + x); // error
    }
  }
}

